...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="sJy-de-MTu">
                                <rect key="frame" x="16" y="290" width="348" height="34"/>
                                <constraints>
...
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstrain
                                <rect key="frame" x="16" y="362" width="348" height="34"/>
                                <constraints>
...
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="filled" title="Sign In" cornerStyle="capsule"/>
                                <connections>
                                    <action selector="SignInClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="WMd-iP-z3g"/>
...
                                <color key="tintColor" systemColor="darkTextColor"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Sign In with Google" cornerStyle="capsule">
                                    <backgroundConfiguration key="background" imageContentMode="left" strokeWidth="3" strokeOutset="10">
                                        <imageReference key="image" image="person.fill" catalog="system" symbolScale="large"/>
...
                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Forgot Password?"/>
                            </button>
                            <view contentMode="center" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fvB-4W-TYw">
...
                                </constraints>
                            </view>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="or" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vQQ-ae-7SC">
                                <rect key="frame" x="176" y="554" width="40" height="51"/>
                                <color key="backgroundColor" systemColor="secondarySystemGroupedBackgroundColor"/>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Sign Up" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uT8-Tb-tCL">
                                <rect key="frame" x="252" y="797" width="60" height="20.333333333333371"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
