...
    }
    
    @IBAction func SignInClicked(_ sender: Any) {
        print("Sign In Clicked: \(emailTextField.text) \(passwordTextField.text)")
        
        guard let email = emailTextField.text, !email.isEmpty, let password = passwordTextField.text, !password.isEmpty else {
            viewModel.showAlert(view: self, message: "Please, fill in email and password")
            return
        }
        
        if !viewModel.isValidEmail(email) {
            viewModel.showAlert(view: self, message: "Please, enter a valid email")
            return
        }
        
        if !viewModel.isValidPassword(password) {
            viewModel.showAlert(view: self, message: "Please, enter a valid password")
            return
...
